--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css' />
-  <link rel='stylesheet' href='css/styles.css' />
+  <!-- <link rel='stylesheet' href='css/styles.css' /> -->
   <title>VSTDA</title>
 </head>
 
-<body>
+<body style='background: linear-gradient(to left, #b3e6eb, #6281c9)'>
   <div id="root"></div>
   <script src="bundle.js"></script>
 </body>
